# FewShotTabLLM

./: .gitignore  AGENTS.md  LICENSE  README.md  example.env  ml_eval.ipynb  ml_eval.py  plot_evaluation_graphs.ipynb  plot_evaluation_graphs.py  pyproject.toml  requirements_tensorrt.txt  requirements_vllm.txt  tensorrt_config.json  tensorrt_sampling_optimized.py
flash_tabgen_tensorrt/: __init__.py
flash_tabgen_tensorrt/core/: __init__.py  data_profiler.py  decoder.py  encoding.py  generator_remote_vllm.py  generator_tensorrt.py  generator_vllm.py  langfuse_utils.py  prompts.py  tabgen_remote_vllm.py  tabgen_tensorrt.py  tabgen_vllm.py
mcp_server/: README.md  mcp_server.py
mcp_server/core/: loaders.py  schemas.py  server.py  services.py  synth_services.py  tool_descriptions.py  validation.py
mcp_server/synthesizer/: generate.py  synthesizer_base.py  train.py
mcp_server/tests/: test_validation.py
services/: data_handler.py  logger_config.py  parsers.py  plot_data_statistics.py  plot_evaluation_scores.py  sampling.py
