[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fewshottabllm"
version = "1.0.0"
description = "FewShotTabLLM: few-shot, training-free synthetic tabular data generation with LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hadi Koubeissy"},
    {name = "Michel El Khoury"},
    {name = "Marc Kamradt"},
    {name = "Abdallah Makhoul"},
]
keywords = ["synthetic-data", "tabular-data", "llm", "data-generation", "few-shot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "dython>=0.7.0",
    "xgboost>=2.0.0",
    "click>=8.1.0",
    "fsspec>=2023.9.0",
    "s3fs>=2023.9.0",
    "pyarrow>=13.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
    "mypy>=1.5.0",
    "ipython>=8.15.0",
    "jupyter>=1.0.0",
]
observability = [
    "langfuse>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BMW-InnovationLab/FewShotTabLLM"
Repository = "https://github.com/BMW-InnovationLab/FewShotTabLLM"

[tool.setuptools.packages.find]
where = ["."]
include = ["flash_tabgen*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false